# tarot.rs

./: .gitignore  Caddyfile  deploy.sh  tarot.rs.code-workspace
.github/workflows/: deploy.yml
assets/: script.js  styles.css
cloudformation/: README.md  base.yml  cloudfront.yml  deploy-base.sh  deploy-cloudfront.sh  tarot-rs-cloudfront.yml
lambda/: Cargo.toml  README.md  dev.sh
lambda/src/: db.rs  game.rs  html.rs  main.rs  scoring.rs  server.rs
lambda/src/server/: handler.rs  http_utils.rs  responses.rs  routes.rs
