[package]
name = "tarot-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.56"
aws-sdk-dynamodb = "0.34"
lambda_http = "0.8"
lambda_runtime = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["v4"] }
http = "0.2"
maud = { version = "0.25" }
serde_urlencoded = "0.7.1"
lazy_static = "1.5.0"
regex = "1.11.1"
thiserror = "2.0.11"
qrcode = "0.14.1"
image = "0.25.5"

rustls-webpki = "0.102" # https://github.com/MystenLabs/sui/issues/21509